// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders the component and isValid set to true 1`] = `
.c1 {
  border: 2px solid #00A45A;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c1::-webkit-input-placeholder {
  color: #6F748B;
}

.c1:disabled {
  background-color: #F8F8F9;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

<div
  class="c0"
>
  <input
    aria-label="test1"
    class="c1"
    id="text-id-test1"
    name="test1"
    type="text"
  />
</div>
`;

exports[`<TextField /> renders the component with error 1`] = `
.c1 {
  border: 2px solid #F52D2D;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c1::-webkit-input-placeholder {
  color: #6F748B;
}

.c1:disabled {
  background-color: #F8F8F9;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

<div
  class="c0"
>
  <input
    aria-label="test1"
    class="c1"
    id="text-id-test1"
    name="test1"
    type="text"
  />
</div>
`;

exports[`<TextField /> renders the component with error and label and size 1`] = `
.c1 {
  margin: 0;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.6;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 600;
  font-size: 16px;
}

.c0 {
  display: block;
}

<label
  class="c0 c1"
  for="text-id-test1"
>
  yes!
</label>
`;

exports[`<TextField /> renders the component with label 1`] = `
.c1 {
  margin: 0;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.6;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 600;
  font-size: 16px;
}

.c0 {
  display: block;
}

<label
  class="c0 c1"
  for="text-id-test1"
>
  Username
</label>
`;

exports[`<TextField /> renders the component with no a11y violations 1`] = `
.c1 {
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c1::-webkit-input-placeholder {
  color: #6F748B;
}

.c1:disabled {
  background-color: #F8F8F9;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

<div
  class="c0"
>
  <input
    aria-label="test1"
    class="c1"
    id="text-id-test1"
    name="test1"
    type="text"
  />
</div>
`;

exports[`<TextField /> renders the component with prefix 1`] = `
.c2 {
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c2::-webkit-input-placeholder {
  color: #6F748B;
}

.c2:disabled {
  background-color: #F8F8F9;
}

.c0 {
  max-width: 148px;
  width: 100%;
}

.c1 {
  position: relative;
  display: block;
}

.c1::before {
  content: '£';
  position: absolute;
  left: 10px;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #6F748B;
}

.c1 input {
  padding-left: 24px;
}

<div
  class="c0"
>
  <span
    class="c1"
    prefix="£"
  >
    <input
      aria-label="test1"
      class="c2"
      id="text-id-test1"
      name="test1"
      type="text"
    />
  </span>
</div>
`;

exports[`<TextField /> renders the component with size 1`] = `
.c1 {
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c1::-webkit-input-placeholder {
  color: #6F748B;
}

.c1:disabled {
  background-color: #F8F8F9;
}

.c0 {
  max-width: 148px;
  width: 100%;
}

<div
  class="c0"
>
  <input
    aria-label="test1"
    class="c1"
    id="text-id-test1"
    name="test1"
    type="text"
  />
</div>
`;
